# script-hub

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  bootstrap.sh  conda-env.yaml  convert-precomputed-web.service  dev.docker-compose.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  script-hub.service
scripts/convert-simple-image/convert_to_precomputed/: tensorstore_utils.py
src/convert_precomputed_web/: __init__.py  celeryconfig.py  main.py
src/convert_to_precomputed/: __main__.py  chained_progress.py  convert.py  io_utils.py  tensorstore_utils.py  types.py  zimg_utils.py
src/labeled_image_to_precomputed/: labeled_image_to_precomputed.py  precomputed_io.py  utils.py
src/script_hub/: main.py  settings.py  task_queue.py  worker.py
src/test_script/: echo.py
web/: index-bootstrap.html  index.html  main.js  terminal.html
