[project]
name = "convert-precomputed-web"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "蔡涛", email = "caitao@zhejianglab.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "GPL-3.0-only" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
